--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -25,14 +25,14 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].Name, new { @class = "company-name-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].Name, new { @class = "company-name-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].Name, new { @class = "company-name-input form-control", @placeholder = @Resources.CompanyName })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].Name, "", new { @class = "company-name-validation" })
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].City, new { @class = "company-city-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].City, new { @class = "company-city-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].City, new { @class = "company-city-input form-control", @placeholder = @Resources.City })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].City, "", new { @class = "company-city-validation" })
                                 </div>
                             </div>
@@ -41,7 +41,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].ParentCompanyName, new { @class = "company-parent-company-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].ParentCompanyName, new { @class = "company-parent-company-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].ParentCompanyName, new { @class = "company-parent-company-input form-control", @placeholder = @Resources.ParentCompanyName })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].ParentCompanyName, "", new { @class = "company-parent-company-validation" })
                                 </div>
                             </div>
@@ -55,7 +55,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].OtherIndustry, new { @class = "company-other-industry-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].OtherIndustry, new { @class = "company-other-industry-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].OtherIndustry, new { @class = "company-other-industry-input form-control", @placeholder = @Resources.OtherIndustry })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].OtherIndustry, "", new { @class = "company-other-industry-validation" })
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].MainProductions, new { @class = "company-productions-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].MainProductions, new { @class = "company-productions-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].MainProductions, new { @class = "company-productions-input form-control", @placeholder = @Resources.MainProductions })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].MainProductions, "", new { @class = "company-productions-validation" })
                                 </div>
                             </div>
@@ -72,14 +72,14 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].Turnover, new { @class = "company-turnover-input form-control", @placeholder = @Resources.Turnover })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].Turnover, "", new { @class = "company-turnover-validation" })
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
                                     @Html.LabelFor(model => Model.Companies[i].NumberOfEmployess, new { @class = "company-employees-label control-label" })
-                                    @Html.TextBoxFor(model => Model.Companies[i].NumberOfEmployess, new { @class = "company-employees-input form-control" })
+                                    @Html.TextBoxFor(model => Model.Companies[i].NumberOfEmployess, new { @class = "company-employees-input form-control", @placeholder = @Resources.NumberOfEmployess })
                                     @Html.ValidationMessageFor(model => Model.Companies[i].NumberOfEmployess, "", new { @class = "company-employees-validation" })
                                 </div>
                             </div>
@@ -100,21 +100,21 @@
                                         <div class="col-md-5 col-md-offset-1 left-border left-control">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].Name, new { @class = "position-name-label control-label" })
-                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].Name, new { @class = "position-name-input form-control" })
+                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].Name, new { @class = "position-name-input form-control", @placeholder = @Resources.PositionName })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Name, "", new { @class = "position-name-validation" })
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].FromTime, new { @class = "position-from-time-label control-label" })
-                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].FromTime, new { @class = "position-from-time-input form-control" })
+                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].FromTime, new { @class = "position-from-time-input form-control", @placeholder = @Resources.FromTime })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].FromTime, "", new { @class = "position-from-time-validation" })
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].ToTime, new { @class = "position-to-time-label control-label" })
-                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ToTime, new { @class = "position-to-time-input form-control" })
+                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ToTime, new { @class = "position-to-time-input form-control", @placeholder = @Resources.ToTime })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ToTime, "", new { @class = "position-to-time-validation" })
                                                 <div class="checkbox">
                                                     @Html.CheckBoxFor(model => Model.Companies[i].Positions[j].Now, new { @class = "career-position-now-input" })
@@ -127,7 +127,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].KeyTasks, new { @class = "position-key-tasks-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].KeyTasks, new { @class = "position-key-tasks-input form-control", @rows = 5 })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].KeyTasks, new { @class = "position-key-tasks-input form-control", @rows = 5, @placeholder = @Resources.KeyTasksPlaceholder })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].KeyTasks, "", new { @class = "position-key-tasks-validation" })
                                             </div>
                                         </div>
@@ -136,7 +136,7 @@
                                         <div class="col-md-4 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-label control-label" })
-                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-input form-control" })
+                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-input form-control", @placeholder = @Resources.FromYear })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ReportingTo, "", new { @class = "position-reporting-to-validation" })
                                             </div>
                                         </div>
@@ -145,7 +145,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-input form-control", @rows = 5 })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].DirectSubordinates, "", new { @class = "position-subordinates-validation" })
                                             </div>
                                         </div>
@@ -154,7 +154,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5 })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Achievements, "", new { @class = "position-achievements-validation" })
                                             </div>
                                         </div>
@@ -163,7 +163,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-input form-control", @rows = 5 })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, "", new { @class = "position-reason-validation" })
                                             </div>
                                         </div>
