--- a/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
+++ b/CV.Management.Web/Views/Shared/_PersonalInformation.cshtml
@@ -11,13 +11,13 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.FullName, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.FullName, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.FullName, new { @class = "form-control", @placeholder = @Resources.FullName })
                         @Html.ValidationMessageFor(model => model.FullName)
                     </div>
 
                     @Html.LabelFor(model => model.LinkedInLink, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.LinkedInLink, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.LinkedInLink, new { @class = "form-control", @placeholder = @Resources.LinkedInLink })
                         @Html.ValidationMessageFor(model => model.LinkedInLink)
                     </div>
                 </div>
@@ -29,31 +29,31 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Address, new { @class = "form-control", @placeholder = @Resources.AddressPlaceholder })
                         @Html.ValidationMessageFor(model => model.Address)
                     </div>
 
                     @Html.LabelFor(model => model.Phone, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", @placeholder = @Resources.PhonePlaceholder })
                         @Html.ValidationMessageFor(model => model.Phone)
                     </div>
 
                     @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", @placeholder = @Resources.Email })
                         @Html.ValidationMessageFor(model => model.Email)
                     </div>
 
                     @Html.LabelFor(model => model.Skype, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.Skype, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Skype, new { @class = "form-control", @placeholder = @Resources.Skype })
                         @Html.ValidationMessageFor(model => model.Skype)
                     </div>
 
                     @Html.LabelFor(model => model.Project, new { @class = "control-label col-md-12" })
                     <div class="col-md-12">
-                        @Html.TextBoxFor(model => model.Project, new { @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Project, new { @class = "form-control", @placeholder = @Resources.Project })
                         @Html.ValidationMessageFor(model => model.Project)
                     </div>
 
