Missing placeholders added. Bugfixes here and there.

--- a/CV.Management.Web/Content/main.css
+++ b/CV.Management.Web/Content/main.css
@@ -214,6 +214,10 @@ html, body {
     border-top-right-radius: 0px;
 }
 
+    .panel-heading h4 {
+        line-height: 24px;
+    }
+
 .panel-group .panel {
     border-radius: 0px;
 }
@@ -292,4 +296,18 @@ html, body {
     background-color: #FFFFFF;
     border-color: #1a76bc;
     color: #1a76bc;
+}
+
+.tab_act {
+    background: url(Images/tab_close_h.png) no-repeat center;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    display: block;
+    float: right;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
