--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -10,7 +10,9 @@
         <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse1">
             <h4 class="panel-title uppercase">
                 @Resources.Personal
+                <span class="tab_act"> </span>
             </h4>
+            
         </div>
         <div id="collapse1" class="panel-collapse collapse in">
             <div class="panel-body">
@@ -28,7 +30,8 @@
     <div class="panel panel-default">
         <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse2">
             <h4 class="panel-title uppercase">
-                    @Resources.Education
+                @Resources.Education
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse2" class="panel-collapse collapse">
@@ -43,6 +46,7 @@
         <div class="panel-heading panel-middle-blue" data-toggle="collapse" data-target="#collapse3">
             <h4 class="panel-title uppercase">
                 @Resources.Courses
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse3" class="panel-collapse collapse">
@@ -55,6 +59,7 @@
         <div class="panel-heading panel-pink" data-toggle="collapse" data-target="#collapse4">
             <h4 class="panel-title uppercase">
                 @Resources.Language
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse4" class="panel-collapse collapse">
@@ -67,6 +72,7 @@
         <div class="panel-heading panel-red" data-toggle="collapse" data-target="#collapse5">
             <h4 class="panel-title uppercase">
                 @Resources.CareerSummary
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse5" class="panel-collapse collapse">
@@ -79,6 +85,7 @@
         <div class="panel-heading panel-heavy-blue" data-toggle="collapse" data-target="#collapse6">
             <h4 class="panel-title uppercase">
                 @Resources.Memberships
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse6" class="panel-collapse collapse">
@@ -91,6 +98,7 @@
         <div class="panel-heading panel-orange" data-toggle="collapse" data-target="#collapse7">
             <h4 class="panel-title uppercase">
                 @Resources.Compensation
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse7" class="panel-collapse collapse">
@@ -103,6 +111,7 @@
         <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse8">
             <h4 class="panel-title uppercase">
                 @Resources.NoticePeriodLabel
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse8" class="panel-collapse collapse">
@@ -115,6 +124,7 @@
         <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse9">
             <h4 class="panel-title uppercase">
                 @Resources.AdditionalComments
+                <span class="tab_act"> </span>
             </h4>
         </div>
         <div id="collapse9" class="panel-collapse collapse">
