--- a/CV.Management.Web/Views/Account/ForgotPassword.cshtml
+++ b/CV.Management.Web/Views/Account/ForgotPassword.cshtml
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="form-group">
-                        <input type="submit" class="btn btn-default" value="Email Link" />
+                        <input type="submit" class="btn btn-primary" value="Email Link" />
                     </div>
                 </div>
             </div>
