--- a/CV.Management.Web/Views/Account/Login.cshtml
+++ b/CV.Management.Web/Views/Account/Login.cshtml
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
                         <div class="form-group">
-                            <input type="submit" value="Log in" class="btn btn-default" />
+                            <input type="submit" value="Log in" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
