--- a/CV.Management.Web/Views/Account/Register.cshtml
+++ b/CV.Management.Web/Views/Account/Register.cshtml
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="form-group">
-                        <input type="submit" class="btn btn-default" value="Register" />
+                        <input type="submit" class="btn btn-primary" value="Register" />
                     </div>
                 </div>
             </div>
