--- a/CV.Management.Web/Views/Account/SendCode.cshtml
+++ b/CV.Management.Web/Views/Account/SendCode.cshtml
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="form-group">
-                        <input type="submit" value="Submit" class="btn btn-default" />
+                        <input type="submit" value="Submit" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
