--- a/CV.Management.Web/Views/Manage/ChangePassword.cshtml
+++ b/CV.Management.Web/Views/Manage/ChangePassword.cshtml
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="form-group">
-                        <input type="submit" value="Change password" class="btn btn-default" />
+                        <input type="submit" value="Change password" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Change password" class="btn btn-primary" />
         </div>
     </div>
 }
