--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -136,7 +136,7 @@
                                         <div class="col-md-4 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-label control-label" })
-                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-input form-control", @placeholder = @Resources.FromYear })
+                                                @Html.TextBoxFor(model => Model.Companies[i].Positions[j].ReportingTo, new { @class = "position-reporting-to-input form-control", @placeholder = @Resources.ReportingTo })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ReportingTo, "", new { @class = "position-reporting-to-validation" })
                                             </div>
                                         </div>
@@ -145,7 +145,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].DirectSubordinates, new { @class = "position-subordinates-input form-control", @rows = 5, @placeholder = @Resources.DirectSubordinates })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].DirectSubordinates, "", new { @class = "position-subordinates-validation" })
                                             </div>
                                         </div>
@@ -154,7 +154,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.Achievements })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Achievements, "", new { @class = "position-achievements-validation" })
                                             </div>
                                         </div>
@@ -163,7 +163,7 @@
                                         <div class="col-md-11 col-md-offset-1 left-border">
                                             <div class="form-group">
                                                 @Html.LabelFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-label control-label" })
-                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-input form-control", @rows = 5, @placeholder = @Resources.FromYear })
+                                                @Html.TextAreaFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, new { @class = "position-reason-input form-control", @rows = 5, @placeholder = @Resources.ReasonForLeaving })
                                                 @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].ReasonForLeaving, "", new { @class = "position-reason-validation" })
                                             </div>
                                         </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-offset-1 col-md-10 text-center">
-                            <span id="position_add" class="tab_more uppercase">@Resources.AddPosition</span>
+                            <span id="position_add" class="position_add tab_more uppercase">@Resources.AddPosition</span>
                         </div>
                     </div>
                 </div>
