--- a/CV.Management.Web/Views/Account/Login.cshtml
+++ b/CV.Management.Web/Views/Account/Login.cshtml
@@ -11,11 +11,16 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
                         <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        @Html.ValidationSummary("", new { @class = "text-danger" })
                     </div>
                 </div>
 
