--- a/CV.Management.Web/Views/Account/ResetPassword.cshtml
+++ b/CV.Management.Web/Views/Account/ResetPassword.cshtml
@@ -9,11 +9,16 @@
         @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            @Html.ValidationSummary("", new { @class = "text-danger" })
 
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
                 </div>
             </div>
 
