--- a/CV.Management.Web/Views/Shared/_AdditionalComments.cshtml
+++ b/CV.Management.Web/Views/Shared/_AdditionalComments.cshtml
@@ -4,8 +4,14 @@
 
     @using (Html.BeginForm("AdditionalComments", "Cv", FormMethod.Post))
     {
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
         @Html.AntiForgeryToken()
+
+        <div class="row">
+            <div class="col-md-12">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-12">
