--- a/CV.Management.Web/Views/Shared/_NoticePeriod.cshtml
+++ b/CV.Management.Web/Views/Shared/_NoticePeriod.cshtml
@@ -4,8 +4,13 @@
 
     @using (Html.BeginForm("NoticePeriod", "Cv", FormMethod.Post))
     {
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.AntiForgeryToken()
+
+        <div class="row">
+            <div class="col-md-12">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-md-4">
