--- a/CV.Management.Web/Views/Manage/AddPhoneNumber.cshtml
+++ b/CV.Management.Web/Views/Manage/AddPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CV.Management.Web.Models.AddPhoneNumberViewModel
 @{
-    Layout = "_AccountLayout.cshtml";
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
 }
 
 <div class="row">
