--- a/CV.Management.Web/Views/Manage/Index.cshtml
+++ b/CV.Management.Web/Views/Manage/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CV.Management.Web.Models.IndexViewModel
 @{
     ViewBag.Title = "Manage";
-    Layout = "_AccountLayout.cshtml";
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -57,13 +57,13 @@
                 }
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
+        @*<dt>Two-Factor Authentication:</dt>
         <dd>
             <p>
                 There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication.
             </p>
-            @*@if (Model.TwoFactor)
+            @if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
@@ -82,7 +82,7 @@
                         <input type="submit" value="Enable" class="btn btn-link" />
                         </text>
                     }
-                }*@
-        </dd>
+                }
+        </dd>*@
     </dl>
 </div>
