--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -9,6 +9,8 @@
 
         <h4 class="uppercase">@Resources.CompanyInformation</h4>
 
+        <h4 class="italic">Start with the most recent one</h4>
+
         <div id="companies_container">
             @for (var i = 0; i < Model.Companies.Count; i++)
             {
