Smooth page navigation added

--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -14,7 +14,7 @@
             </h4>
             
         </div>
-        <div id="collapse1" class="panel-collapse collapse in">
+        <div id="collapse1" class="panel-collapse collapse">
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-3">
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="education_panel" class="panel panel-default">
         <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse2">
             <h4 class="panel-title uppercase">
                 @Resources.Education
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="courses_panel" class="panel panel-default">
         <div class="panel-heading panel-middle-blue" data-toggle="collapse" data-target="#collapse3">
             <h4 class="panel-title uppercase">
                 @Resources.Courses
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="language_panel" class="panel panel-default">
         <div class="panel-heading panel-pink" data-toggle="collapse" data-target="#collapse4">
             <h4 class="panel-title uppercase">
                 @Resources.Language
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="career_panel" class="panel panel-default">
         <div class="panel-heading panel-red" data-toggle="collapse" data-target="#collapse5">
             <h4 class="panel-title uppercase">
                 @Resources.CareerSummary
@@ -81,7 +81,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="memberships_panel" class="panel panel-default">
         <div class="panel-heading panel-heavy-blue" data-toggle="collapse" data-target="#collapse6">
             <h4 class="panel-title uppercase">
                 @Resources.Memberships
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="compensation_panel" class="panel panel-default">
         <div class="panel-heading panel-orange" data-toggle="collapse" data-target="#collapse7">
             <h4 class="panel-title uppercase">
                 @Resources.Compensation
@@ -107,7 +107,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="notice_panel" class="panel panel-default">
         <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse8">
             <h4 class="panel-title uppercase">
                 @Resources.NoticePeriodLabel
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default">
+    <div id="comments_panel" class="panel panel-default">
         <div class="panel-heading panel-green" data-toggle="collapse" data-target="#collapse9">
             <h4 class="panel-title uppercase">
                 @Resources.AdditionalComments
