--- a/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
+++ b/CV.Management.Web/Views/Shared/_CareerSummary.cshtml
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group text-right">
-                        <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
+                        <input id="save_carreer" type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                     </div>
                 </div>
             </div>
