--- a/CV.Management.Web/Views/Shared/_Language.cshtml
+++ b/CV.Management.Web/Views/Shared/_Language.cshtml
@@ -52,7 +52,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group text-right">
-                    <input type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
+                    <input id="save_language" type="submit" value="@Resources.Save" class="btn btn-primary float-right" />
                 </div>
             </div>
         </div>
