--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -5,6 +5,10 @@
 
 @*https://stackoverflow.com/questions/38281010/asp-net-mvc-multiple-forms-in-single-strongly-typed-view-and-validate-using-data*@
 
+<div id="alert_message" class="alert alert-success" role="alert">
+    Your data was saved successfully!
+</div>
+
 <div class="panel-group" id="accordion">
     <div class="panel panel-default">
         <div class="panel-heading panel-light-blue" data-toggle="collapse" data-target="#collapse1">
