--- a/CV.Management.Web/Views/Admin/Overview.cshtml
+++ b/CV.Management.Web/Views/Admin/Overview.cshtml
@@ -8,12 +8,6 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h5>Profiles</h5>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
             <table class="table">
                 <thead>
                     <tr>
@@ -30,7 +24,7 @@
                         @Html.HiddenFor(t => Model.Profiles[i].ProfileId)
                         <td>@Model.Profiles[i].FullName</td>
                         <td>@Model.Profiles[i].Username</td>
-                        <td><span class="download_word"></span> <span class="download_ppt"></span></td>
+                        <td>ENG: <span class="download_word_en"></span> <span class="download_ppt_en"></span> | LV: <span class="download_word_lv"></span></td>
                     </tr>
                     }
                 </tbody>
