--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -6,7 +6,7 @@
 @*https://stackoverflow.com/questions/38281010/asp-net-mvc-multiple-forms-in-single-strongly-typed-view-and-validate-using-data*@
 
 <div id="alert_message" class="alert alert-success" role="alert">
-    Your data was saved successfully!
+    @Resources.SaveNotice
 </div>
 
 <div class="panel-group" id="accordion">
