--- a/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
+++ b/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
@@ -11,23 +11,28 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
-            </div>
-            <div class="navbar-collapse collapse">
-                @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
-                   {
-                       FullName = Model.Name
-                   })
-            </div>
-        </div>
+    <div class="container">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="navbar-collapse collapse">
+                    @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
+                       {
+                           FullName = Model.Name
+                       })
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
     </div>
     <div class="container body-content">
         @RenderBody()
