--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -8,39 +8,45 @@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
+
 
 </head>
 <body>
-    <div class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/cv/profile/en">EN</a></li>
-                    <li><a href="/cv/profile/lv">LV</a></li>
+    <div class="container">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
+                </div>
 
-                    @if (User.IsInRole("Administrator"))
-                    {
-                        <li><a href="/admin/overview">Admin</a></li>
-                    }
-
-
-                    @*<li><span class="download_word_empty"></span></span></li>*@
-                </ul>
-                @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
-                   {
-                       FullName = Model.Name
-                   })
-            </div>
-        </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle dropdown-title" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Language <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/cv/profile/en">EN</a></li>
+                                <li><a href="/cv/profile/lv">LV</a></li>
+                            </ul>
+                        </li>
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <li><a href="/admin/overview">Admin</a></li>
+                        }
+                    </ul>
+                    @Html.Partial("_LoginPartial", new CV.Management.Web.Models.LoginPartialViewModel
+                            {
+                                FullName = Model.Name
+                            })
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
     </div>
     <div class="container body-content">
         @RenderBody()
